--- a/404.html
+++ b/404.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="refresh" content="0; url=/" />
-  <script>
-    const redirect = () => {
-      const redirectTo = window.location.pathname;
-      window.location.replace('/' + '#' + redirectTo);
-    };
-    redirect();
-  </script>
-</head>
-<body></body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=/" />
+    <script>
+      const redirect = () => {
+        const redirectTo = window.location.pathname + window.location.search + window.location.hash;
+        sessionStorage.redirect = redirectTo;
+        window.location.replace('/');
+      };
+      if (window.location.pathname !== '/') redirect();
+    </script>
+  </head>
+  <body></body>
 </html>
